fixed height on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ html, body {
   height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  /* display: flex;
-  flex-direction: column; */
+  height: calc(var(--vh, 1vh) * 100);
+  display: flex;
+  flex-direction: column;
 }
 
 
